# backend-tech-progr

./: .env  .gitignore  Changelog.md  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml  pyproject.toml
migration/: env.py
migration/versions/: 55275b8c24cc_init.py  7d508eb85503_all_tables.py  a5b59ce93779_update_columns_to_varchar.py
src/: main.py
src/project/api/: routes.py
src/project/api/routes/: __init__.py  accepted_person_routes.py  candidate_education_routes.py  candidate_routes.py  candidate_skill_routes.py  education_organization_routes.py  employer_routes.py  resume_routes.py  resume_vacancy_routes.py  skill_routes.py  vacancy_routes.py  vacancy_skill_routes.py
src/project/core/: config.py
src/project/infrastructure/postgres/: database.py  models.py
src/project/infrastructure/postgres/repository/: accepted_person_repo.py  candidate_education_repo.py  candidate_repo.py  candidate_skill_repo.py  education_organization_repo.py  employer_repo.py  resume_repo.py  resume_vacancy_repo.py  skill_repo.py  vacancy_repo.py  vacancy_skill_repo.py
src/project/schemas/: __init__.py  accepted_person.py  candidate.py  candidate_education.py  candidate_skill.py  education_organization.py  employer.py  resume.py  resume_vacancy.py  skill.py  vacancy.py  vacancy_skill.py
